# rucli

./: .gitignore  Cargo.toml  flake.nix  shell.nix
src/: lib.rs  main.rs
src/netconf/: error.rs  mod.rs  xml.rs
src/ssh/: error.rs  mod.rs
